# echosounders

./: .gitignore  README.md  README.rst  ideas.odt  meson.build  remaining_header_work.md  requirements.txt
src/: meson.build
src/nanomodule/: meson.build  module.cpp
src/nanomodule/py_filetemplates/: i_inputfilehandler.hpp  module.cpp  module.hpp
src/nanomodule/py_filetemplates/py_datacontainers/: datagramcontainer.hpp  pingcontainer.hpp
src/nanomodule/py_filetemplates/py_datainterfaces/: i_annotationdatainterface.hpp  i_annotationdatainterfaceperfile.hpp  i_configurationdatainterface.hpp  i_configurationdatainterfaceperfile.hpp  i_datagraminterface.hpp  i_environmentdatainterface.hpp  i_environmentdatainterfaceperfile.hpp  i_filedatainterface.hpp  i_filedatainterfaceperfile.hpp  i_navigationdatainterface.hpp  i_navigationdatainterfaceperfile.hpp  i_pingdatainterface.hpp  i_pingdatainterfaceperfile.hpp
src/nanomodule/py_filetemplates/py_datatypes/: c_filecache.cpp  c_i_ping.cpp  c_i_pingbottom.cpp  c_i_pingcommon.cpp  c_i_pingfiledata.cpp  c_i_pingwatercolumn.cpp  i_ping.hpp  i_pingbottom.hpp  i_pingcommon.hpp  i_pingfiledata.hpp  i_pingwatercolumn.hpp
src/nanomodule/py_gsf/: c_gsffilehandler.cpp  module.cpp  module.hpp
src/nanomodule/py_kmall/: c_kmallfilehandler.cpp  module.cpp  module.hpp
src/nanomodule/py_kmall/py_datagrams/: c_cheave.cpp  c_cposition.cpp  c_iinstallationparam.cpp  c_iopruntime.cpp  c_kmalldatagram.cpp  c_kmallmultibeamdatagram.cpp  c_kmallsensordatagram.cpp  c_kmallunknown.cpp  c_mrangeanddepth.cpp  c_mwatercolumn.cpp  c_sclock.cpp  c_skmbinary.cpp  c_soundvelocityprofile.cpp  c_soundvelocitytransducer.cpp  c_sposition.cpp  c_spositionerror.cpp  c_ssoundvelocityprofile.cpp  c_ssoundvelocitytransducer.cpp  module.cpp  module.hpp
src/nanomodule/py_kmall/py_filedatacontainers/: c_kmalldatagramcontainer.cpp  c_kmallpingcontainer.cpp  module.cpp  module.hpp
src/nanomodule/py_kmall/py_filedatainterfaces/: c_kmallconfigurationdatainterface.cpp  c_kmallconfigurationdatainterfaceperfile.cpp  c_kmalldatagramdatainterface.cpp  c_kmalldatagramdatainterfaceperfile.cpp  c_kmalldatagraminterface.cpp  c_kmalldatagraminterface.hpp  c_kmallenvironmentdatainterface.cpp  c_kmallenvironmentdatainterfaceperfile.cpp  c_kmallnavigationdatainterface.cpp  c_kmallnavigationdatainterfaceperfile.cpp  c_kmallotherfiledatainterface.cpp  c_kmallotherfiledatainterfaceperfile.cpp  c_kmallpingdatainterface.cpp  c_kmallpingdatainterfaceperfile.cpp  module.cpp  module.hpp
src/nanomodule/py_kmall/py_filedatatypes/: c_kmallping.cpp  c_kmallpingbottom.cpp  c_kmallpingcommon.cpp  c_kmallpingfiledata.cpp  c_kmallpingwatercolumn.cpp  c_kongsbergallfileinfodata.cpp  module.cpp  module.hpp  (+3 more)
src/nanomodule/py_kongsbergall/: c_kongsbergallfilehandler.cpp  module.cpp  module.hpp
src/nanomodule/py_pingtools/: c_beamsampleselection.cpp  c_beamselection.cpp  c_pingsampleselector.cpp  c_readsamplerange.cpp  module.cpp  module.hpp
src/nanomodule/py_simradraw/: c_file_test_functions.cpp  c_simradrawfilehandler.cpp  module.cpp  module.hpp
src/pch/: echosounders_echosounders_cppy.hpp  echosounders_echosounders_nanopy.hpp  echosounders_testname.hpp  echosounders_themachinethatgoesping_echosounders.hpp
src/pymodule/: docstrings.hpp  docstrings_moreargs.hpp  make_pch.py  meson.build  mkdoc.py  module.cpp  new_doc_header.hpp
src/pymodule/fileinterfaces/: i_annotationdatainterface.hpp  i_configurationdatainterface.hpp  i_datagramcontainer.hpp  i_datagraminterface.hpp  i_environmentdatainterface.hpp  i_filedatainterface.hpp  i_inputfile.hpp  i_inputfileiterator.hpp  i_navigationdatainterface.hpp  i_package_info_types.hpp  i_packagecontainer.hpp  i_packagedatainterface.hpp  i_ping.hpp  i_pingcontainer.hpp  i_pingdatainterface.hpp  i_pingiterator.hpp
src/pymodule/filetemplates/: i_annotationdatainterface.hpp  i_configurationdatainterface.hpp  i_datagramcontainer.hpp  i_datagraminterface.hpp  i_environmentdatainterface.hpp  i_filedatainterface.hpp  i_navigationdatainterface.hpp  i_ping.hpp  i_pingcontainer.hpp  i_pingdatainterface.hpp
src/pymodule/pch/: pch.hpp
src/pymodule/py_em3000/: c_fileem3000.cpp  module.cpp  module.hpp
src/pymodule/py_filetemplates/: i_inputfile.hpp  i_inputfilehandler.hpp  module.cpp  module.hpp
src/pymodule/py_gsf/: c_gsffilehandler.cpp  module.cpp  module.hpp
src/pymodule/py_kongsbergall/: c_filehandlerkongsbergall.cpp  c_kongsbergallamplitudeconverter.cpp  c_kongsbergallfilehandler.cpp  module.cpp  module.hpp
src/pymodule/py_pingtools/: c_beamsampleselection.cpp  c_beamsampleselector.cpp  c_beamselection.cpp  c_pingsampleselection.cpp  c_pingsampleselector.cpp  c_readsamplerange.cpp  module.cpp  module.hpp
src/pymodule/py_simrad/: c_file_test_functions.cpp  c_filesimradraw.cpp  module.cpp  module.hpp
src/pymodule/py_simradraw/: c_file_test_functions.cpp  c_filehandlersimradraw.cpp  c_simradrawfilehandler.cpp  module.cpp  module.hpp
src/pymodule/simrad/: c_file_test_functions.cpp  c_fileraw.cpp  c_filesimradraw.cpp  c_simrad_specialized_types.cpp  c_simradannotationdatainterface.cpp  c_simradconfigurationdatainterface.cpp  c_simraddatagramcontainer.cpp  c_simraddatagraminterface.cpp  c_simraddatagraminterface.hpp  c_simradenvironmentdatainterface.cpp  c_simradfiledata.cpp  c_simradnavigationdatainterface.cpp  c_simradotherdatainterface.cpp  c_simradpackagecontainer.cpp  c_simradpackagedatainterface.cpp  c_simradping.cpp  c_simradpingdatainterface.cpp  c_simradpingiterator.cpp  module.cpp  module.hpp
src/tests/: meson.build  test_main.cpp  tutorial.test.cpp
src/tests/pingtools/: beamsampleselection.test.cpp  beamsampleselector.test.cpp  beamselection.test.cpp  pingsampleselection.test.cpp  pingsampleselector.test.cpp  readsamplerange.test.cpp
src/tests/simrad/: ek60_common.test.cpp
src/tests/unittest_data/: create.ipynb
src/themachinethatgoesping/: meson.build
src/themachinethatgoesping/echosounders/: .gitignore  kongsbergallfilehandler.hpp  meson.build  simradrawfilehandler.hpp
subprojects/GSF_03-11/: gsf.gcc  meson.build  tools.ini
(+1967 files in other folders)
