# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

# -- module name
module_name = 'echosounders_nanopy'
        
# -- sources
sources = [
  'module.cpp',
  'py_kongsbergall/c_kongsbergallfilehandler.cpp',
  'py_kongsbergall/module.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallannotationdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallannotationdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallconfigurationdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallconfigurationdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergalldatagramdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergalldatagramdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergalldatagraminterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallenvironmentdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallenvironmentdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallnavigationdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallnavigationdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallotherfiledatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallotherfiledatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallpingdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallpingdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/module.cpp',
  'py_kongsbergall/py_filedatacontainers/c_kongsbergalldatagramcontainer.cpp',
  'py_kongsbergall/py_filedatacontainers/c_kongsbergallpingcontainer.cpp',
  'py_kongsbergall/py_filedatacontainers/module.cpp',
  'py_kongsbergall/py_datagrams/c_attitudedatagram.cpp',
  'py_kongsbergall/py_datagrams/c_clockdatagram.cpp',
  'py_kongsbergall/py_datagrams/c_depthorheightdatagram.cpp',
  'py_kongsbergall/py_datagrams/c_extradetections.cpp',
  'py_kongsbergall/py_datagrams/c_extraparameters.cpp',
  'py_kongsbergall/py_datagrams/c_headingdatagram.cpp',
  'py_kongsbergall/py_datagrams/c_installationparameters.cpp',
  'py_kongsbergall/py_datagrams/c_kongsbergalldatagram.cpp',
  'py_kongsbergall/py_datagrams/c_kongsbergallunknown.cpp',
  'py_kongsbergall/py_datagrams/c_networkattitudevelocitydatagram.cpp',
  'py_kongsbergall/py_datagrams/c_positiondatagram.cpp',
  'py_kongsbergall/py_datagrams/c_puidoutput.cpp',
  'py_kongsbergall/py_datagrams/c_pustatusoutput.cpp',
  'py_kongsbergall/py_datagrams/c_qualityfactordatagram.cpp',
  'py_kongsbergall/py_datagrams/c_rawrangeandangle.cpp',
  'py_kongsbergall/py_datagrams/c_runtimeparameters.cpp',
  'py_kongsbergall/py_datagrams/c_seabedimagedata.cpp',
  'py_kongsbergall/py_datagrams/c_singlebeamechosounderdepth.cpp',
  'py_kongsbergall/py_datagrams/c_soundspeedprofiledatagram.cpp',
  'py_kongsbergall/py_datagrams/c_surfacesoundspeeddatagram.cpp',
  'py_kongsbergall/py_datagrams/c_watercolumndatagram.cpp',
  'py_kongsbergall/py_datagrams/c_xyzdatagram.cpp',
  'py_kongsbergall/py_datagrams/module.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_attitudedatagramattitude.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_extradetectionsdetectionclasses.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_extradetectionsextradetections.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_networkattitudevelocitydatagramattitude.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_rawrangeandanglebeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_rawrangeandangletransmitsector.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_sampleamplitudesstructure.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_seabedimagedatabeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_watercolumndatagrambeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_watercolumndatagramtransmitsector.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_xyzdatagrambeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/enum_detectiontype.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/module.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallfileinfodata.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallping.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingbottom.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingcommon.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingfiledata.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingwatercolumn.cpp',
  'py_kongsbergall/py_filedatatypes/module.cpp',
  'py_kongsbergall/py_filedatatypes/calibration/c_kongsbergallwatercolumncalibration.cpp',
  'py_filetemplates/module.cpp',
  'py_filetemplates/py_datatypes/c_filecache.cpp',
  'py_filetemplates/py_datatypes/c_i_ping.cpp',
  'py_filetemplates/py_datatypes/c_i_pingbottom.cpp',
  'py_filetemplates/py_datatypes/c_i_pingcommon.cpp',
  'py_filetemplates/py_datatypes/c_i_pingfiledata.cpp',
  'py_filetemplates/py_datatypes/c_i_pingwatercolumn.cpp',
  'py_filetemplates/py_datatypes/py_cache_structures/c_filepackagecache.cpp',
  'py_filetemplates/py_datatypes/py_calibration/c_amplitudecalibration.cpp',
  'py_filetemplates/py_datatypes/py_calibration/c_multisectorwatercolumncalibration.cpp',
  'py_filetemplates/py_datatypes/py_calibration/c_watercolumncalibration.cpp',
  'py_gsf/c_gsffilehandler.cpp',
  'py_gsf/module.cpp',
  'py_pingtools/c_beamsampleselection.cpp',
  'py_pingtools/c_beamselection.cpp',
  'py_pingtools/c_pingsampleselector.cpp',
  'py_pingtools/c_readsamplerange.cpp',
  'py_pingtools/module.cpp',
]

# define python module
py_navigation = pymod.extension_module(
    module_name,
    sources: sources,
    dependencies : [
        echosounders_dep,
        tools_nanobind_dep,
        nanobind_dep,
        python3_dep],
    link_language : 'cpp',
    # cpp_pch : 'pch/pch.hpp',
    override_options: [
    ],
    cpp_args : ['-DMODULE_NAME='+module_name, '-DMODULE_VERSION=' + '"' + meson.project_version() + '"'],
    install : true,
    subdir : projectnamespace,
    install_tag : 'python-runtime',
    override_options: ['unity=off']
)



        
