# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

# -- module name
module_name = 'echosounders'
        
# -- sources
sources = [
    'module.cpp',
    'py_simrad/module.cpp',
    'py_simrad/py_datagrams/module.cpp',
    'py_simrad/py_datagrams/c_simraddatagram.cpp',
    'py_simrad/py_datagrams/c_simradunknown.cpp',
    'py_simrad/py_datagrams/c_MRU0.cpp',
    'py_simrad/py_datagrams/c_TAG0.cpp',
    'py_simrad/py_datagrams/c_NME0.cpp',
    'py_simrad/py_datagrams/c_XML0.cpp',
    'py_simrad/py_datagrams/c_FIL1.cpp',
    'py_simrad/py_datagrams/c_RAW3.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/module.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_node.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_parameter_channel.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_parameter.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_initialparameter.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_pingsequence_ping.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_pingsequence.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_environment_transducer.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_environment.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_sensor.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor_telegramvalue.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor_telegram.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transducer.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xmlconfigurationactivepingmode.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver_channel_frequencypar.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xmlconfigurationtransceiverchanneltransducer.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver_channel.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_channelconfiguration.cpp',
    'py_simrad/py_datagrams/py_RAW3_datatypes/module.cpp',
    'py_simrad/py_datagrams/py_RAW3_datatypes/c_i_RAW3_data.cpp',
    'py_simrad/py_datagrams/py_RAW3_datatypes/c_RAW3_datacomplexfloat32.cpp',
    'py_simrad/py_datagrams/py_RAW3_datatypes/c_RAW3_datapowerandangle.cpp',
    'py_simrad/py_datagrams/py_RAW3_datatypes/c_RAW3_datapower.cpp',
    'py_simrad/py_datagrams/py_RAW3_datatypes/c_RAW3_dataangle.cpp',
    'py_simrad/py_datagrams/py_RAW3_datatypes/c_RAW3_dataskipped.cpp',
    'py_simrad/py_filedatainterfaces/module.cpp',
    'py_simrad/py_filedatainterfaces/c_simraddatagraminterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradconfigurationdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradconfigurationdatainterface_perfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradnavigationdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradnavigationdatainterface_perfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradenvironmentdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradenvironmentdatainterface_perfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradpingdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradpingdatainterface_perfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradannotationdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradannotationdatainterface_perfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradotherfiledatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradotherfiledatainterface_perfile.cpp',
    'py_simrad/py_filedatatypes/module.cpp',
    'py_simrad/py_filedatatypes/c_simradping.cpp',
    'py_simrad/py_filedatacontainers/module.cpp',
    'py_simrad/py_filedatacontainers/c_simraddatagramcontainer.cpp',
    'py_simrad/py_filedatacontainers/c_simradpingcontainer.cpp',
    'py_simrad/c_filesimradraw.cpp',
    'py_simrad/c_file_test_functions.cpp',

    'py_em3000/py_datagrams/py_substructures/enum_detectiontype.cpp',
    'py_em3000/py_datagrams/py_substructures/c_xyzdatagrambeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_extradetectionsdetectionclasses.cpp',
    'py_em3000/py_datagrams/py_substructures/c_extradetectionsextradetections.cpp',
    'py_em3000/py_datagrams/py_substructures/c_rawrangeandangletransmitsector.cpp',
    'py_em3000/py_datagrams/py_substructures/c_rawrangeandanglebeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_seabedimagedatabeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_sampleamplitudesstructure.cpp',
    'py_em3000/py_datagrams/py_substructures/c_watercolumndatagramtransmitsector.cpp',
    'py_em3000/py_datagrams/py_substructures/c_watercolumndatagrambeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_attitudedatagramattitude.cpp',
    'py_em3000/py_datagrams/py_substructures/module.cpp',
    'py_em3000/py_datagrams/c_em3000datagram.cpp',
    'py_em3000/py_datagrams/c_em3000unknown.cpp',
    'py_em3000/py_datagrams/c_xyzdatagram.cpp',
    'py_em3000/py_datagrams/c_extradetections.cpp',
    'py_em3000/py_datagrams/c_rawrangeandangle.cpp',
    'py_em3000/py_datagrams/c_seabedimagedata.cpp',
    'py_em3000/py_datagrams/c_watercolumndatagram.cpp',
    'py_em3000/py_datagrams/c_qualityfactordatagram.cpp',
    'py_em3000/py_datagrams/c_attitudedatagram.cpp',
    'py_em3000/py_datagrams/module.cpp',
    'py_em3000/py_filedatacontainers/module.cpp',
    'py_em3000/py_filedatacontainers/c_em3000datagramcontainer.cpp',
    'py_em3000/py_filedatainterfaces/module.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000datagraminterface.cpp',
    'py_em3000/module.cpp',
    'py_em3000/c_fileem3000.cpp',
]

# define python module
py_navigation = pymod.extension_module(
    module_name,
    sources: sources,
    dependencies : [
        echosounders_dep,
        tools_pybind_dep,
        pybind11_dep,
        python3_dep],
    link_language : 'cpp',
    override_options: [
    ],
    cpp_args : ['-DMODULE_NAME='+module_name, '-DMODULE_VERSION=' + '"' + meson.project_version() + '"'],
    install : true,
    install_dir : pythoninstallpath,
    install_tag : 'python-runtime'
)



        
