# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

# -- module name
module_name = 'echosounders'
        
# -- sources
sources = [
    'module.cpp',

    'py_filetemplates/module.cpp',
    'py_filetemplates/py_datatypes/c_i_ping.cpp',
    'py_filetemplates/py_datatypes/c_i_pingbottom.cpp',

    'py_pingtools/module.cpp',
    'py_pingtools/substructures/c_beamsampleselection.cpp',
    'py_pingtools/substructures/c_readsamplerange.cpp',
    'py_pingtools/c_pingsampleselection.cpp',
    'py_pingtools/c_pingsampleselector.cpp',

    'py_simrad/module.cpp',
    'py_simrad/py_datagrams/module.cpp',
    'py_simrad/py_datagrams/c_simraddatagram.cpp',
    'py_simrad/py_datagrams/c_simradunknown.cpp',
    'py_simrad/py_datagrams/c_MRU0.cpp',
    'py_simrad/py_datagrams/c_TAG0.cpp',
    'py_simrad/py_datagrams/c_NME0.cpp',
    'py_simrad/py_datagrams/c_XML0.cpp',
    'py_simrad/py_datagrams/c_FIL1.cpp',
    'py_simrad/py_datagrams/c_RAW3.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/module.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_node.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_parameter_channel.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_parameter.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_initialparameter.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_pingsequence_ping.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_pingsequence.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_environment_transducer.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_environment.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_sensor.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor_telegramvalue.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor_telegram.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transducer.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xmlconfigurationactivepingmode.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver_channel_frequencypar.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xmlconfigurationtransceiverchanneltransducer.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver_channel.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_xml_configuration.cpp',
    'py_simrad/py_datagrams/py_xml_datagrams/c_channelconfiguration.cpp',
    'py_simrad/py_datagrams/py_raw3datatypes/module.cpp',
    'py_simrad/py_datagrams/py_raw3datatypes/c_i_raw3data.cpp',
    'py_simrad/py_datagrams/py_raw3datatypes/c_raw3datacomplexfloat32.cpp',
    'py_simrad/py_datagrams/py_raw3datatypes/c_raw3datapowerandangle.cpp',
    'py_simrad/py_datagrams/py_raw3datatypes/c_raw3datapower.cpp',
    'py_simrad/py_datagrams/py_raw3datatypes/c_raw3dataangle.cpp',
    'py_simrad/py_datagrams/py_raw3datatypes/c_raw3dataskipped.cpp',
    'py_simrad/py_filedatainterfaces/module.cpp',
    'py_simrad/py_filedatainterfaces/c_simraddatagraminterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradconfigurationdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradconfigurationdatainterfaceperfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradnavigationdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradnavigationdatainterfaceperfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradenvironmentdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradenvironmentdatainterfaceperfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradpingdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradpingdatainterfaceperfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradannotationdatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradannotationdatainterfaceperfile.cpp',
    'py_simrad/py_filedatainterfaces/c_simradotherfiledatainterface.cpp',
    'py_simrad/py_filedatainterfaces/c_simradotherfiledatainterfaceperfile.cpp',
    'py_simrad/py_filedatatypes/module.cpp',
    'py_simrad/py_filedatatypes/c_simradpingrawdata.cpp',
    'py_simrad/py_filedatatypes/c_simradping.cpp',
    'py_simrad/py_filedatacontainers/module.cpp',
    'py_simrad/py_filedatacontainers/c_simraddatagramcontainer.cpp',
    'py_simrad/py_filedatacontainers/c_simradpingcontainer.cpp',
    'py_simrad/c_filesimradraw.cpp',
    'py_simrad/c_file_test_functions.cpp',

    'py_em3000/py_datagrams/py_substructures/enum_detectiontype.cpp',
    'py_em3000/py_datagrams/py_substructures/c_xyzdatagrambeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_extradetectionsdetectionclasses.cpp',
    'py_em3000/py_datagrams/py_substructures/c_extradetectionsextradetections.cpp',
    'py_em3000/py_datagrams/py_substructures/c_rawrangeandangletransmitsector.cpp',
    'py_em3000/py_datagrams/py_substructures/c_rawrangeandanglebeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_seabedimagedatabeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_sampleamplitudesstructure.cpp',
    'py_em3000/py_datagrams/py_substructures/c_watercolumndatagramtransmitsector.cpp',
    'py_em3000/py_datagrams/py_substructures/c_watercolumndatagrambeam.cpp',
    'py_em3000/py_datagrams/py_substructures/c_attitudedatagramattitude.cpp',
    'py_em3000/py_datagrams/py_substructures/c_networkattitudevelocitydatagramattitude.cpp',
    'py_em3000/py_datagrams/py_substructures/module.cpp',
    'py_em3000/py_datagrams/c_em3000datagram.cpp',
    'py_em3000/py_datagrams/c_em3000unknown.cpp',
    'py_em3000/py_datagrams/c_xyzdatagram.cpp',
    'py_em3000/py_datagrams/c_extradetections.cpp',
    'py_em3000/py_datagrams/c_rawrangeandangle.cpp',
    'py_em3000/py_datagrams/c_seabedimagedata.cpp',
    'py_em3000/py_datagrams/c_watercolumndatagram.cpp',
    'py_em3000/py_datagrams/c_qualityfactordatagram.cpp',
    'py_em3000/py_datagrams/c_attitudedatagram.cpp',
    'py_em3000/py_datagrams/c_networkattitudevelocitydatagram.cpp',
    'py_em3000/py_datagrams/c_clockdatagram.cpp',
    'py_em3000/py_datagrams/c_depthorheightdatagram.cpp',
    'py_em3000/py_datagrams/c_headingdatagram.cpp',
    'py_em3000/py_datagrams/c_positiondatagram.cpp',
    'py_em3000/py_datagrams/c_singlebeamechosounderdepth.cpp',
    'py_em3000/py_datagrams/c_surfacesoundspeeddatagram.cpp',
    'py_em3000/py_datagrams/c_soundspeedprofiledatagram.cpp',
    'py_em3000/py_datagrams/c_installationparameters.cpp',
    'py_em3000/py_datagrams/c_runtimeparameters.cpp',
    'py_em3000/py_datagrams/c_extraparameters.cpp',
    'py_em3000/py_datagrams/c_pustatusoutput.cpp',
    'py_em3000/py_datagrams/c_puidoutput.cpp',
    'py_em3000/py_datagrams/module.cpp',
    'py_em3000/py_filedatacontainers/module.cpp',
    'py_em3000/py_filedatacontainers/c_em3000datagramcontainer.cpp',
    'py_em3000/py_filedatacontainers/c_em3000pingcontainer.cpp',
    'py_em3000/py_filedatainterfaces/module.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000datagraminterface.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000otherfiledatainterface.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000otherfiledatainterfaceperfile.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000annotationdatainterface.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000annotationdatainterfaceperfile.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000environmentdatainterface.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000environmentdatainterfaceperfile.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000navigationdatainterface.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000navigationdatainterfaceperfile.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000configurationdatainterface.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000configurationdatainterfaceperfile.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000pingdatainterface.cpp',
    'py_em3000/py_filedatainterfaces/c_em3000pingdatainterfaceperfile.cpp',
    'py_em3000/py_filedatatypes/module.cpp',
    'py_em3000/py_filedatatypes/c_em3000pingrawdata.cpp',
    'py_em3000/py_filedatatypes/c_em3000ping.cpp',
    'py_em3000/module.cpp',
    'py_em3000/c_fileem3000.cpp',
]

# define python module
py_navigation = pymod.extension_module(
    module_name,
    sources: sources,
    dependencies : [
        echosounders_dep,
        tools_pybind_dep,
        pybind11_dep,
        python3_dep],
    link_language : 'cpp',
    override_options: [
    ],
    cpp_args : ['-DMODULE_NAME='+module_name, '-DMODULE_VERSION=' + '"' + meson.project_version() + '"'],
    install : true,
    subdir : projectnamespace,
    install_tag : 'python-runtime'
)



        
