# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

# -- module name
module_name = 'echosounders_cppy'
        
# -- sources
sources = [
  'module.cpp',
  'py_kongsbergall/c_kongsbergallamplitudeconverter.cpp',
  'py_kongsbergall/c_kongsbergallfilehandler.cpp',
  'py_kongsbergall/module.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallannotationdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallannotationdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallconfigurationdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallconfigurationdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergalldatagramdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergalldatagramdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergalldatagraminterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallenvironmentdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallenvironmentdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallnavigationdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallnavigationdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallotherfiledatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallotherfiledatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallpingdatainterface.cpp',
  'py_kongsbergall/py_filedatainterfaces/c_kongsbergallpingdatainterfaceperfile.cpp',
  'py_kongsbergall/py_filedatainterfaces/module.cpp',
  'py_kongsbergall/py_filedatacontainers/c_kongsbergalldatagramcontainer.cpp',
  'py_kongsbergall/py_filedatacontainers/c_kongsbergallpingcontainer.cpp',
  'py_kongsbergall/py_filedatacontainers/module.cpp',
  'py_kongsbergall/py_datagrams/c_attitudedatagram.cpp',
  'py_kongsbergall/py_datagrams/c_clockdatagram.cpp',
  'py_kongsbergall/py_datagrams/c_depthorheightdatagram.cpp',
  'py_kongsbergall/py_datagrams/c_extradetections.cpp',
  'py_kongsbergall/py_datagrams/c_extraparameters.cpp',
  'py_kongsbergall/py_datagrams/c_headingdatagram.cpp',
  'py_kongsbergall/py_datagrams/c_installationparameters.cpp',
  'py_kongsbergall/py_datagrams/c_kongsbergalldatagram.cpp',
  'py_kongsbergall/py_datagrams/c_kongsbergallunknown.cpp',
  'py_kongsbergall/py_datagrams/c_networkattitudevelocitydatagram.cpp',
  'py_kongsbergall/py_datagrams/c_positiondatagram.cpp',
  'py_kongsbergall/py_datagrams/c_puidoutput.cpp',
  'py_kongsbergall/py_datagrams/c_pustatusoutput.cpp',
  'py_kongsbergall/py_datagrams/c_qualityfactordatagram.cpp',
  'py_kongsbergall/py_datagrams/c_rawrangeandangle.cpp',
  'py_kongsbergall/py_datagrams/c_runtimeparameters.cpp',
  'py_kongsbergall/py_datagrams/c_seabedimagedata.cpp',
  'py_kongsbergall/py_datagrams/c_singlebeamechosounderdepth.cpp',
  'py_kongsbergall/py_datagrams/c_soundspeedprofiledatagram.cpp',
  'py_kongsbergall/py_datagrams/c_surfacesoundspeeddatagram.cpp',
  'py_kongsbergall/py_datagrams/c_watercolumndatagram.cpp',
  'py_kongsbergall/py_datagrams/c_xyzdatagram.cpp',
  'py_kongsbergall/py_datagrams/module.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_attitudedatagramattitude.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_extradetectionsdetectionclasses.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_extradetectionsextradetections.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_networkattitudevelocitydatagramattitude.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_rawrangeandanglebeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_rawrangeandangletransmitsector.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_sampleamplitudesstructure.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_seabedimagedatabeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_watercolumndatagrambeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_watercolumndatagramtransmitsector.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/c_xyzdatagrambeam.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/enum_detectiontype.cpp',
  'py_kongsbergall/py_datagrams/py_substructures/module.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallfileinfodata.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallping.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingbottom.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingcommon.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingfiledata.cpp',
  'py_kongsbergall/py_filedatatypes/c_kongsbergallpingwatercolumn.cpp',
  'py_kongsbergall/py_filedatatypes/module.cpp',
  'py_filetemplates/module.cpp',
  'py_filetemplates/py_datatypes/c_filecache.cpp',
  'py_filetemplates/py_datatypes/c_i_ping.cpp',
  'py_filetemplates/py_datatypes/c_i_pingbottom.cpp',
  'py_filetemplates/py_datatypes/c_i_pingcommon.cpp',
  'py_filetemplates/py_datatypes/c_i_pingfiledata.cpp',
  'py_filetemplates/py_datatypes/c_i_pingwatercolumn.cpp',
  'py_filetemplates/py_datatypes/py_cache_structures/c_filepackagecache.cpp',
  'py_filetemplates/py_datatypes/py_calibration/c_watercolumncalibration.cpp',
  'py_pingtools/c_beamsampleselection.cpp',
  'py_pingtools/c_beamselection.cpp',
  'py_pingtools/c_pingsampleselector.cpp',
  'py_pingtools/c_readsamplerange.cpp',
  'py_pingtools/module.cpp',
  'py_simradraw/c_file_test_functions.cpp',
  'py_simradraw/c_simradrawfilehandler.cpp',
  'py_simradraw/module.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawannotationdatainterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawannotationdatainterfaceperfile.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawconfigurationdatainterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawconfigurationdatainterfaceperfile.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawdatagramdatainterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawdatagramdatainterfaceperfile.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawdatagraminterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawenvironmentdatainterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawenvironmentdatainterfaceperfile.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawnavigationdatainterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawnavigationdatainterfaceperfile.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawotherfiledatainterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawotherfiledatainterfaceperfile.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawpingdatainterface.cpp',
  'py_simradraw/py_filedatainterfaces/c_simradrawpingdatainterfaceperfile.cpp',
  'py_simradraw/py_filedatainterfaces/module.cpp',
  'py_simradraw/py_filedatacontainers/c_simradrawdatagramcontainer.cpp',
  'py_simradraw/py_filedatacontainers/c_simradrawpingcontainer.cpp',
  'py_simradraw/py_filedatacontainers/module.cpp',
  'py_simradraw/py_datagrams/c_FIL1.cpp',
  'py_simradraw/py_datagrams/c_MRU0.cpp',
  'py_simradraw/py_datagrams/c_NME0.cpp',
  'py_simradraw/py_datagrams/c_RAW3.cpp',
  'py_simradraw/py_datagrams/c_TAG0.cpp',
  'py_simradraw/py_datagrams/c_XML0.cpp',
  'py_simradraw/py_datagrams/c_simradrawdatagram.cpp',
  'py_simradraw/py_datagrams/c_simradrawunknown.cpp',
  'py_simradraw/py_datagrams/module.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_channelconfiguration.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor_telegram.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration_sensor_telegramvalue.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver_channel.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration_transceiver_channel_frequencypar.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_configuration_transducer.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_environment.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_environment_transducer.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_initialparameter.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_node.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_parameter.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_parameter_channel.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_pingsequence.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_pingsequence_ping.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xml_sensor.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xmlconfigurationactivepingmode.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/c_xmlconfigurationtransceiverchanneltransducer.cpp',
  'py_simradraw/py_datagrams/py_xml_datagrams/module.cpp',
  'py_simradraw/py_datagrams/py_raw3datatypes/c_i_raw3data.cpp',
  'py_simradraw/py_datagrams/py_raw3datatypes/c_raw3dataangle.cpp',
  'py_simradraw/py_datagrams/py_raw3datatypes/c_raw3datacomplexfloat32.cpp',
  'py_simradraw/py_datagrams/py_raw3datatypes/c_raw3datapower.cpp',
  'py_simradraw/py_datagrams/py_raw3datatypes/c_raw3datapowerandangle.cpp',
  'py_simradraw/py_datagrams/py_raw3datatypes/c_raw3dataskipped.cpp',
  'py_simradraw/py_datagrams/py_raw3datatypes/module.cpp',
  'py_simradraw/py_filedatatypes/c_simradrawping.cpp',
  'py_simradraw/py_filedatatypes/c_simradrawpingbottom.cpp',
  'py_simradraw/py_filedatatypes/c_simradrawpingcommon.cpp',
  'py_simradraw/py_filedatatypes/c_simradrawpingfiledata.cpp',
  'py_simradraw/py_filedatatypes/c_simradrawpingwatercolumn.cpp',
  'py_simradraw/py_filedatatypes/module.cpp',
  'py_simradraw/py_filedatatypes/py_cache_structures/c_simradrawfileinfodata.cpp',
  'py_simradraw/py_filedatatypes/sub/c_transceiverinformation.cpp',
]

# define python module
py_navigation = pymod.extension_module(
    module_name,
    sources: sources,
    dependencies : [
        echosounders_dep,
        tools_pybind_dep,
        pybind11_dep,
        python3_dep],
    link_language : 'cpp',
    # cpp_pch : 'pch/pch.hpp',
    override_options: [
    ],
    cpp_args : ['-DMODULE_NAME='+module_name, '-DMODULE_VERSION=' + '"' + meson.project_version() + '"'],
    install : true,
    subdir : projectnamespace,
    install_tag : 'python-runtime'
)



        
